# Projet-Mise-en-prod-3A

./: .gitignore  Dockerfile  LICENSE  README.md  README_app.md  README_new_features.html  README_new_features.md  README_project_structure.md  _quarto.yml  app.py  application.yaml  index.html  index.qmd  pyproject.toml  requirements.lock.txt  requirements.txt  run.bat  run.sh  search.json  styles.css  uv_requirements.txt
.github/workflows/: ci-docker.yaml  ci-tests.yaml  publish.yaml  website.yaml
.streamlit/: config.toml
App/: test.py
App/flask/: __main__.py  app.py
App/streamlit/: README.md  app1.6.py  appv1.0.py  appv1.1.py  appv1.4.py  appv1.5.py  appv1.6.py  appv1.7.py  appv1.8.py  appv1.py  appv2.0.py  appv2.1.py  appv2.2.py  appv3.0.py  appv3.1.py  appv3.2.py  appv3.3.py  appv3.5.py  appv3.6.py  (+1 more)
Data/: echant_10k_reviews2.csv
Model/: README.md  data_cleaning.py  nettoyage_datasets.ipynb  nettoyage_datasets_ajout_filtres.ipynb  output.csv  test_data_cleaning.py
Preprocessing/: README.md  data_cleaning.py  test_data_cleaning.py
Streamlit_app/: main.py
deployment/: deployment.yaml  ingress.yaml  service.yaml
exemples_divers/: __main__.py
final_app/: requirements.lock.txt
flask_backend/: like_api.py  login_api.py  main_api.py
my_app/: app.py
pages/: likes.py  recipe_finder_page.py  recipe_page.py
src/: data_cleaning.py  functions.py  query_helpers.py  recipe_finder_functions.py  st_session_functions.py
tests/: test_app_functions.py  test_data_cleaning.py  test_data_processing.py  test_functions.py
utils/: config.py  config.yaml
(+126 files in other folders)
